# open-sofi-sfu

./: README.md  load_data_into_db.ipynb  pyproject.toml
data/: open_sofi.db
data/raw/: .~lock.vendors.ods#  SOFI ongoing salaries and expenses.ods  vendors.ods
