[tool.poetry]
name = "open-sofi-sfu"
version = "0.1.0"
description = ""
authors = ["bubblbu <asura.enkhbayar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
datasette = "^0.58.1"
matplotlib = "seaborn"
sqlite-utils = "^3.17.1"
odfpy = "^1.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
